--- a/css/style.css
+++ b/css/style.css
@@ -1699,39 +1699,34 @@ body {
 /* Mobile Responsive - Portrait orientation (phone held vertically) */
 @media screen and (max-width: 768px) and (orientation: portrait) {
   body {
-    align-items: center;
+    align-items: flex-end;
   }
 
   .flower {
-    transform: scale(2.2);
-    bottom: auto;
-    top: 45%;
+    transform: scale(1.6);
+    bottom: 8vmin;
   }
 
   .flower--1 {
     left: 50%;
-    transform: scale(2.2) translateX(-50%);
+    transform: scale(1.6) translateX(-50%);
   }
 
   .flower--2 {
-    left: 65%;
-    top: 35%;
-    transform: scale(2);
+    left: 68%;
+    transform: scale(1.4);
   }
 
   .flower--3 {
-    left: 25%;
-    top: 55%;
-    transform: scale(1.8);
+    left: 22%;
+    transform: scale(1.3);
   }
 
-  .flower__grass {
-    bottom: -15vmin;
-    transform: scale(1.5);
-  }
-
-  .flower__g-right {
-    bottom: -10vmin;
+  /* Hide messy grass elements on mobile */
+  .flower__grass,
+  .flower__g-right,
+  .flower__g-front {
+    display: none !important;
   }
 
   .moon {
@@ -1754,25 +1749,23 @@ body {
 /* Very small phones */
 @media screen and (max-width: 400px) and (orientation: portrait) {
   .flower {
-    transform: scale(2.5);
-    top: 50%;
+    transform: scale(1.8);
+    bottom: 5vmin;
   }
 
   .flower--1 {
     left: 50%;
-    transform: scale(2.5) translateX(-50%);
+    transform: scale(1.8) translateX(-50%);
   }
 
   .flower--2 {
-    left: 75%;
-    top: 38%;
-    transform: scale(2.2);
+    left: 72%;
+    transform: scale(1.5);
   }
 
   .flower--3 {
-    left: 20%;
-    top: 58%;
-    transform: scale(2);
+    left: 18%;
+    transform: scale(1.4);
   }
 }
 
