--- a/css/style.css
+++ b/css/style.css
@@ -1697,81 +1697,18 @@ body {
 }
 
 /* Mobile Responsive - Portrait orientation (phone held vertically) */
+/* Simply zoom/scale everything proportionally */
 @media screen and (max-width: 768px) and (orientation: portrait) {
-  body {
-    align-items: flex-end;
-  }
-
-  .flower {
-    transform: scale(1.6);
-    bottom: 8vmin;
-  }
-
-  .flower--1 {
-    left: 50%;
-    transform: scale(1.6) translateX(-50%);
-  }
-
-  .flower--2 {
-    left: 68%;
-    transform: scale(1.4);
-  }
-
-  .flower--3 {
-    left: 22%;
-    transform: scale(1.3);
-  }
-
-  /* Hide messy grass elements on mobile */
-  .flower__grass,
-  .flower__g-right,
-  .flower__g-front {
-    display: none !important;
-  }
-
-  .moon {
-    width: 10vmin;
-    height: 10vmin;
-    top: 5%;
-    right: 8%;
-  }
-
-  .star {
-    width: 0.5vmin;
-    height: 0.5vmin;
-  }
-
-  .shooting-star {
-    display: none;
-  }
-}
-
-/* Very small phones */
-@media screen and (max-width: 400px) and (orientation: portrait) {
-  .flower {
-    transform: scale(1.8);
-    bottom: 5vmin;
-  }
-
-  .flower--1 {
-    left: 50%;
-    transform: scale(1.8) translateX(-50%);
-  }
-
-  .flower--2 {
-    left: 72%;
+  .long {
     transform: scale(1.5);
-  }
-
-  .flower--3 {
-    left: 18%;
-    transform: scale(1.4);
+    transform-origin: bottom center;
   }
 }
 
-/* Landscape orientation on mobile - original layout works fine */
-@media screen and (max-width: 768px) and (orientation: landscape) {
-  .flower {
-    transform: scale(1.2);
+/* Very small phones - scale even more */
+@media screen and (max-width: 480px) and (orientation: portrait) {
+  .long {
+    transform: scale(1.8);
+    transform-origin: bottom center;
   }
 }
